--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "boilerplate",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "next": "9.5.2",
+    "next-pwa": "^3.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
