--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "next": "9.5.2",
+    "next-images": "^1.4.1",
     "next-pwa": "^3.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
